# trezoa-keychain

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: ci.yml  rust-publish.yml  typescript-ci.yml  typescript-publish.yml
docs/: ADDING_SIGNERS.md
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/src/: error.rs  lib.rs  traits.rs
rust/src/aws_kms/: mod.rs
rust/src/fireblocks/: jwt.rs  mod.rs  types.rs
rust/src/memory/: mod.rs
rust/src/privy/: mod.rs
rust/src/sdk_adapter/: mod.rs  v2.rs  v3.rs
rust/src/tests/: mod.rs  rpc_util.rs  test_fireblocks_integration.rs  test_kms_integration.rs  test_privy_integration.rs  test_turnkey_integration.rs  test_vault_integration.rs
rust/src/turnkey/: mod.rs
rust/src/vault/: mod.rs
typescript/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.integration.ts
typescript/examples/: package.json  test-signer.ts
